# car-tracker

./: .coverage  .gitignore  README.md  config.yaml  pyproject.toml  run.sh
.beads/: .beads-credential-key  metadata.json
.beads/dolt.20260315T082229Z.corrupt.backup/: config.yaml
.github/workflows/: spike-test-scrape.yml  track.yml
conductor/: patterns.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/booking_lifecycle_20260317/: learnings.md  metadata.json  spec.md
conductor/archive/db_brand_cleanup_20260318/: learnings.md  metadata.json  plan.md  spec.md
conductor/archive/email_delivery_20260314/: learnings.md
conductor/archive/email_enhancements_20260318/: learnings.md  metadata.json  plan.md  spec.md
conductor/archive/fix_change_trend_20260321/: metadata.json  plan.md
conductor/archive/holding_price_20260315/: learnings.md  metadata.json  plan.md  spec.md
conductor/archive/imessage_booking_mgmt_20260316/: learnings.md  metadata.json  spec.md
conductor/archive/imessage_config_20260315/: learnings.md  metadata.json  plan.md
conductor/code_styleguides/: python.md
data/: imessage_state.json
deploy/: com.cartracker.plist.template
docs/: imessage_shortcut_setup.md
scripts/: check_imessage.py  export_cookies.py  import_history.py  run_discord_bot.py  setup-macos.sh  spike_chrome_test.py  update_config.py
src/car_tracker/: __main__.py  config.py  database.py  discord_bot.py  discord_notifier.py  emailer.py  imessage_config.py  lifecycle.py  scraper.py  state.py
tests/: test_app_state.py  test_check_imessage.py  test_config.py  test_database.py  test_database_discord.py  test_discord_notifier.py  test_emailer.py  test_imessage_config.py  test_import_history.py  test_lifecycle.py  test_main.py  test_scraper.py  test_update_config.py
webapp/: README.md  start.sh
webapp/backend/: database.py  main.py
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+147 files in other folders)
